--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,6 +17,13 @@ body, html {
   min-height: 100vh;
 }
 
+.login-logout-buttons, user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
 .Header {
   margin: 1px 0;
   padding: 1px 0;
