--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,7 +17,7 @@ body, html {
   min-height: 100vh;
 }
 
-.login-logout-buttons, user {
+.login-logout-buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
