--- a/frontend/src/Components/TodoCard.css
+++ b/frontend/src/Components/TodoCard.css
@@ -5,7 +5,7 @@
     padding: 20px;
     margin-bottom: 20px;
     height: 100px;
-    width: 200px;
+    width: 250px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -40,4 +40,20 @@
 
 .TodoCard button:hover {
     background-color: hotpink;
+}
+
+.button-link {
+    padding: 8px 16px;
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 1.0rem;
+}
+
+.button-link:hover {
+    background-color: #0056b3;
 }
